res/styles.scss
@mixin cartoonButton ($color) {
  color: #FFF;
  border-radius: 3px;
  margin: 6px 4px 9px 1px;
  box-shadow: rgba(0, 0, 0, 0.2) 4px 4px;
  @include linearGradient($color, mix($color, #506, 60%));

  &:active {
    box-shadow: rgba(0, 0, 0, 0.2) 4px 4px inset;
    margin: 9px 1px 6px 4px;
  }
}

@mixin linearGradient ($top, $bottom) {
  background: $top; /* Old browsers */
  background: -moz-linear-gradient(top,  $top 0%, $bottom 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$top), color-stop(100%,$bottom)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  $top 0%,$bottom 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  $top 0%,$bottom 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  $top 0%,$bottom 100%); /* IE10+ */
  background: linear-gradient(to bottom,  $top 0%,$bottom 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
}

html {
  font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
  text-rendering: optimizeLegibility;
  height: 100%;
  min-height: 100%;
}

body {
  color: #333;
  height: 100%;
  min-height: 100%;
  margin: 0;
  padding: 1px;
  padding-top: 20px;
  box-sizing: border-box;
}

header {
  width: 100%;
  height: 20px;
  position: fixed;
  display: inline-block;
  box-sizing: border-box;
  top: 0;
  left: 0;
  @include linearGradient(#FB3, mix(#FB3, #703, 60%));
  color: #FFF;
  box-shadow: rgba(0, 0, 0, 0.2) 0 4px;
  padding: 0 5px;
  z-index: 9999;
}

header * {
  font-size: 18px;
  line-height: 20px;
}

h1, h2, h3, h4 {
  margin: 0;
  padding: 0;
}

.title {
  float: left;
}

.score {
  float: right;
}

*:focus {
  outline: 0;
}

.centered-content {
  text-align: center;
  height: 100%;
  position: relative;
  max-width: 500px;
  margin: 0 auto;

  .hint-block {
    display: block;
    background-color: rgba(255, 255, 255, 0.8);
    margin: 0;
    font-size: 30px;
    letter-spacing: 5px;
    padding: 10px;
    padding-top: 40px;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: -1;
  }
}

.button {
  @include cartoonButton(#69F);

  width: 60%;
  display: block;
  box-sizing: border-box;

  font-size: 36px;
  text-decoration: none;
  padding: 3px;

  &.inactive {
    opacity: 0.4;
  }
}

.emote-top-menu {
  width: 100%;
  margin: 0;
  display: flex;
  flex-direction: row;

  .correct {
    @include cartoonButton(#6E6);
    font-size: 16px;
  }

  .hint {
    @include cartoonButton(#FB3);
    font-size: 16px;
  }

  .skip {
    @include cartoonButton(#999);
    font-size: 16px;
  }
}

.l-button {
  height: auto;
  padding: 10px;
  font-size: 24px;
  line-height: 24px;
}

.splash {
  @include linearGradient(#FFF, #CFF);

  .logo {
    width: 80%;
    margin: 40px 0;
  }

  .play {
    @include cartoonButton(#6FD);
    line-height: 60px;
    font-size: 50px;
    font-weight: 800;
  }

  .rules {
    @include cartoonButton(#999);
    font-size: 32px;
    width: 55%;
  }

  .credits {
    @include cartoonButton(#999);
    font-size: 32px;
    width: 55%;
  }
}

.notification {
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.8);
  position: fixed;
  box-sizing: border-box;
  top: 0;
  left: 0;
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  transition: opacity .3s linear;
  opacity: 0;
  pointer-events: none;
}

.visible {
  opacity: 1 !important;
  pointer-events: all;
}

.warning {
  position: absolute;
  left: 0;
  bottom: 14px;
  width: 100%;
  color: #F06;
}

.guess {
  width: 100%;
  display: flex;
  position: absolute;
  bottom: 0;

  .input-box {
    box-sizing: border-box;
    border: 2px solid #333;
    border-radius: 3px;
    font-size: 20px;
    flex: 4;
    margin: 6px;

    .red {
      border: 2px solid #F06;
      background-color: #FCD;
    }
  }

  .send {
    @include cartoonButton(#69F);
    font-size: 16px;
    min-width: 60px;
    border: 0;
    flex: 1;
  }
}

.stage {
  box-sizing: border-box;
  padding: 20px;
  position: absolute;
  bottom: 20px;
  left: 20px;
  right: 20px;
  z-index: -1;

  .emoji-block {
    display: block;
    text-align: left;
    margin: 0;
    font-size: 40px;
    line-height: 40px;
  }
}

